manifests/okteto.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: mscarceller
  labels:
    app: mongodb
spec:
  clusterIP: None
  selector:
    app: mongodb
    
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: mscarceller
spec:
  serviceName: mongodb
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
        selector: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:4.0.8
        volumeMounts:
        - name: webchat-volume
          mountPath: /etc/webchat
          readOnly: true
      volumes:
      - name: webchat-volume
        secret:
          secretName: webchat-secrets
          items:
          - key: MONGO_ROOT_USERNAME
            path: admin/MONGO_ROOT_USERNAME
            mode: 0444
          - key: MONGO_ROOT_PASSWORD
            path: admin/MONGO_ROOT_PASSWORD
            mode: 0444

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webchat-ingress
  namespace: mscarceller
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: webchat-mscarceller.cloud.okteto.net
    http:
      paths:
        - path: /
          backend:
            serviceName: webchat      
            servicePort: 8081
        - path: /chat
          backend:
            serviceName: webchat      
            servicePort: 8080

---
apiVersion: v1
kind: Service
metadata:
 namespace: mscarceller
 name: webchatservice
spec:
 type: ClusterIP
 clusterIP: None
 selector:
   app: webchat
 ports:
 - name: hz-port-name
   port: 5701
   targetPort: 5701
   protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: webchat
  namespace: mscarceller
  labels:
    webchatcluster: "true"
    app: webchat
    type: LoadBalancer
spec:
  selector:
    app: webchat
  type: LoadBalancer
  ports:
    - name: webchatfront-port
      protocol: TCP
      port: 8081
      targetPort: 8081
    - name: websvc-port
      protocol: TCP
      port: 8080
      targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: webchat
  namespace: mscarceller
spec:
  selector:
    matchLabels:
      app: webchat
  template:
    metadata:
      labels:
        app: webchat
        component: webchatservice
    spec:
      containers:
      - image: mscarceller/eftgca-backvertx:0.1.0
        imagePullPolicy: Always
        name: webchat
        ports:
          - name: websvc-port
            containerPort: 8080
          - name: hazlecast
            containerPort: 5701
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
      terminationGracePeriodSeconds: 60

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: webchatfront
  namespace: mscarceller
spec:
  selector:
    matchLabels:
      app: webchat
  template:
    metadata:
      labels:
        app: webchat
    spec:
      containers:
        - name: webchatfront
          image: mscarceller/eftgca-front:0.1.0
          imagePullPolicy: Always
          ports:
          - containerPort: 8081
